# reconstruct-bus-trajectories

./: .gitignore  ARCHITECTURE.mmd  README.md  intersections_route22.json  pyproject.toml
analysis/: README.md  __init__.py  build_dashboard_data.py  comparison.py  route_aggregate.py  run_decomposition.py
analysis/data_prep/: build_all_sb_trips.py  build_freeflow_baseline.py  run_r2_route22_sb.py
analysis/prep/: __init__.py  geometry.py
dashboard/: index.html  main.js  mapbox_token.js  style.css
dashboard/app/: chart_util.js  main.js  map_view.js  mapbox_token.js
docs/: attribution_flowchart.html
figures/scripts/: build_100trip_aligned.py  (+10 more)
observation_tool/: README.md  export.js  geo.js  index.html  storage.js  style.css  trips.html  trips.js  wrangler.toml
record-a-ride/: .dev.vars  README.md  app.js  export.js  index.html  sensors 2.js  sensors.js  style 2.css  style.css  sync.js  trips.html  trips.js
scripts/: README.md  build_100trip_aligned.py  build_50trip_timespace.py  build_F4_from_bundle.py  build_alltrip_aligned.py  build_locreg_explainer.py  build_pchip_vs_mqsi.py  build_report.py  build_rocket_vs_r2.py  build_slides.py  build_smoothing_dashboard.py  build_vtrak_smooth.py  plot_intersections.py  run_r2_route22_sb.py
src/: corridor.py
tests/: test_delay_decomposition.py  test_intersections.py  test_io_list_shapes.py  test_io_loaders.py  test_loss.py  test_mapmatch.py  test_prep_geometry.py  test_r2.py  test_realtime.py  test_serialize.py  test_smooth.py  test_smooth_mqsi.py  test_sources.py  test_travel_time.py  test_way_match.py
(+141 files in other folders)
