[project]
name = "bus-trajectories"
version = "0.1.0"
description = "Reconstruct smooth, monotonic bus trajectories from CTA AVL data using LOCREG-PCHIP (Huang et al., ITSC 2023)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "contextily>=1.7.0",
]

[project.scripts]
bus-trajectories = "bus_trajectories.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bus_trajectories"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]
